--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>草稿</title>
+    <title>master 草稿</title>
     <style>
     *{ margin: 0; padding: 0; font-size: 14px;}
     ul{ list-style: none; }
